--- a/LLMSharp.Tokenizers.Tests/LLMSharp.Tokenizers.Tests.csproj
+++ b/LLMSharp.Tokenizers.Tests/LLMSharp.Tokenizers.Tests.csproj
@@ -10,22 +10,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="claude-token-maps.bin" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <EmbeddedResource Include="claude-token-maps.bin" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.10" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.10" />
     <PackageReference Include="coverlet.collector" Version="3.2.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\LLMSharp.Tokenizers.Shared\LLMSharp.Tokenizers.Shared.csproj" />
+    <ProjectReference Include="..\LLMSharp.Anthropic.Tokenizer\LLMSharp.Anthropic.Tokenizer.csproj" />
+    <ProjectReference Include="..\LLMSharp.OpenAi.Tokenizer\LLMSharp.OpenAi.Tokenizer.csproj" />
   </ItemGroup>
 
 </Project>
