--- a/.github/workflows/publish-nugets.yml
+++ b/.github/workflows/publish-nugets.yml
@@ -19,12 +19,12 @@ jobs:
         run: git branch --remote --contains | grep origin/main
       - name: Extract Tag Info
         run: |
-          TAG=${{ github.ref }}
-          echo 'tag : $TAG'
-          PATTERN="^(v(?:-anthropic|-openai)?)((?:[0-9]+\.){2}[0-9]+)$"
+          TAG=${GITHUB_REF/refs\/tags\/}
+          echo $TAG
+          PATTERN="^(v(-anthropic|-openai)?)([0-9]+(\.[0-9]+){2})$"
           if [[ $TAG =~ $PATTERN ]]; then
               echo "PREFIX=${BASH_REMATCH[1]}" >> $GITHUB_ENV
-              echo "VERSION=${BASH_REMATCH[2]}" >> $GITHUB_ENV
+              echo "VERSION=${BASH_REMATCH[3]}" >> $GITHUB_ENV
           else
               echo "Failed to extract tag info!"
               exit 1
