include readme file for packing OpenAi Tokenizer

--- a/LLMSharp.OpenAi.Tokenizer/LLMSharp.OpenAi.Tokenizer.csproj
+++ b/LLMSharp.OpenAi.Tokenizer/LLMSharp.OpenAi.Tokenizer.csproj
@@ -25,6 +25,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\LLMSharp.Tokenizers.Shared\LLMSharp.Tokenizers.Shared.csproj" />
   </ItemGroup>
 
