push tokenizers to nuget

--- a/.github/workflows/publish-nugets.yml
+++ b/.github/workflows/publish-nugets.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Pack OpenAi Tokenizer
         if: env.PREFIX == 'v' || env.PREFIX == 'v-openai'
         run: dotnet pack LLMSharp.OpenAi.Tokenizer --configuration Release /p:Version=${VERSION} --no-build --output .
-    #   - name: Push
-    #     run: dotnet nuget push NuGet.Workflow.${VERSION}.nupkg --source 'https://api.nuget.org/v3/index.json' --api-key ${NUGET_API_KEY}
-    #     env:
-    #       NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
+      - name: Push
+        run: dotnet nuget push LLMSharp.*.Tokenizer.${VERSION}.nupkg --source 'https://api.nuget.org/v3/index.json' --api-key ${NUGET_API_KEY}
+        env:
+          NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
