--- a/LLMSharp.Tokenizers.Shared/LLMSharp.Tokenizers.Shared.csproj
+++ b/LLMSharp.Tokenizers.Shared/LLMSharp.Tokenizers.Shared.csproj
@@ -2,6 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <SignAssembly>True</SignAssembly>
+    <AssemblyOriginatorKeyFile>..\llmsharp-tokenizers.snk</AssemblyOriginatorKeyFile>
+    <DelaySign>True</DelaySign>
   </PropertyGroup>
 
   <ItemGroup>
